@@ -1854,101 +1854,17 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-annotation|@
-name|Test
-DECL|method|testLocalFileDeletionAfterUpload ()
-specifier|public
+DECL|method|verifyLocalFileDeletion ( LogAggregationService logAggregationService)
+specifier|private
 name|void
-name|testLocalFileDeletionAfterUpload
-parameter_list|()
+name|verifyLocalFileDeletion
+parameter_list|(
+name|LogAggregationService
+name|logAggregationService
+parameter_list|)
 throws|throws
 name|Exception
 block|{
-name|this
-operator|.
-name|delSrvc
-operator|=
-operator|new
-name|DeletionService
-argument_list|(
-name|createContainerExecutor
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|delSrvc
-operator|=
-name|spy
-argument_list|(
-name|delSrvc
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|delSrvc
-operator|.
-name|init
-argument_list|(
-name|conf
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|conf
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_LOG_DIRS
-argument_list|,
-name|localLogDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|conf
-operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|NM_REMOTE_APP_LOG_DIR
-argument_list|,
-name|this
-operator|.
-name|remoteRootLogDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|LogAggregationService
-name|logAggregationService
-init|=
-name|spy
-argument_list|(
-operator|new
-name|LogAggregationService
-argument_list|(
-name|dispatcher
-argument_list|,
-name|this
-operator|.
-name|context
-argument_list|,
-name|this
-operator|.
-name|delSrvc
-argument_list|,
-name|super
-operator|.
-name|dirsHandler
-argument_list|)
-argument_list|)
-decl_stmt|;
 name|logAggregationService
 operator|.
 name|init
@@ -2323,6 +2239,262 @@ argument_list|,
 literal|"getType"
 argument_list|,
 literal|"getApplicationID"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testLocalFileDeletionAfterUpload ()
+specifier|public
+name|void
+name|testLocalFileDeletionAfterUpload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|this
+operator|.
+name|delSrvc
+operator|=
+operator|new
+name|DeletionService
+argument_list|(
+name|createContainerExecutor
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|delSrvc
+operator|=
+name|spy
+argument_list|(
+name|delSrvc
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|delSrvc
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOG_DIRS
+argument_list|,
+name|localLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_REMOTE_APP_LOG_DIR
+argument_list|,
+name|this
+operator|.
+name|remoteRootLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LogAggregationService
+name|logAggregationService
+init|=
+name|spy
+argument_list|(
+operator|new
+name|LogAggregationService
+argument_list|(
+name|dispatcher
+argument_list|,
+name|this
+operator|.
+name|context
+argument_list|,
+name|this
+operator|.
+name|delSrvc
+argument_list|,
+name|super
+operator|.
+name|dirsHandler
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|verifyLocalFileDeletion
+argument_list|(
+name|logAggregationService
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testLocalFileDeletionOnDiskFull ()
+specifier|public
+name|void
+name|testLocalFileDeletionOnDiskFull
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|this
+operator|.
+name|delSrvc
+operator|=
+operator|new
+name|DeletionService
+argument_list|(
+name|createContainerExecutor
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|delSrvc
+operator|=
+name|spy
+argument_list|(
+name|delSrvc
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|delSrvc
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOG_DIRS
+argument_list|,
+name|localLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_REMOTE_APP_LOG_DIR
+argument_list|,
+name|this
+operator|.
+name|remoteRootLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|logDirs
+init|=
+name|super
+operator|.
+name|dirsHandler
+operator|.
+name|getLogDirs
+argument_list|()
+decl_stmt|;
+name|LocalDirsHandlerService
+name|dirsHandler
+init|=
+name|spy
+argument_list|(
+name|super
+operator|.
+name|dirsHandler
+argument_list|)
+decl_stmt|;
+comment|// Simulate disk being full by returning no good log dirs but having a
+comment|// directory in full log dirs.
+name|when
+argument_list|(
+name|dirsHandler
+operator|.
+name|getLogDirs
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|dirsHandler
+operator|.
+name|getLogDirsForRead
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|logDirs
+argument_list|)
+expr_stmt|;
+name|LogAggregationService
+name|logAggregationService
+init|=
+name|spy
+argument_list|(
+operator|new
+name|LogAggregationService
+argument_list|(
+name|dispatcher
+argument_list|,
+name|this
+operator|.
+name|context
+argument_list|,
+name|this
+operator|.
+name|delSrvc
+argument_list|,
+name|dirsHandler
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|verifyLocalFileDeletion
+argument_list|(
+name|logAggregationService
 argument_list|)
 expr_stmt|;
 block|}
