@@ -54,6 +54,18 @@ name|mockito
 operator|.
 name|Mockito
 operator|.
+name|spy
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
 name|when
 import|;
 end_import
@@ -127,6 +139,16 @@ operator|.
 name|util
 operator|.
 name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
 import|;
 end_import
 
@@ -1224,6 +1246,162 @@ argument_list|)
 operator|)
 argument_list|)
 expr_stmt|;
+comment|// Create a new context to check if correct container log dirs are fetched
+comment|// on full disk.
+name|LocalDirsHandlerService
+name|dirsHandlerForFullDisk
+init|=
+name|spy
+argument_list|(
+name|dirsHandler
+argument_list|)
+decl_stmt|;
+comment|// good log dirs are empty and nm log dir is in the full log dir list.
+name|when
+argument_list|(
+name|dirsHandlerForFullDisk
+operator|.
+name|getLogDirs
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|dirsHandlerForFullDisk
+operator|.
+name|getLogDirsForRead
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|absLogDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|nmContext
+operator|=
+operator|new
+name|NodeManager
+operator|.
+name|NMContext
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|dirsHandlerForFullDisk
+argument_list|,
+operator|new
+name|ApplicationACLsManager
+argument_list|(
+name|conf
+argument_list|)
+argument_list|,
+operator|new
+name|NMNullStateStoreService
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|nmContext
+operator|.
+name|getApplications
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|appId
+argument_list|,
+name|app
+argument_list|)
+expr_stmt|;
+name|container
+operator|.
+name|setState
+argument_list|(
+name|ContainerState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+name|nmContext
+operator|.
+name|getContainers
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|container1
+argument_list|,
+name|container
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|File
+argument_list|>
+name|dirs
+init|=
+name|ContainerLogsUtils
+operator|.
+name|getContainerLogDirs
+argument_list|(
+name|container1
+argument_list|,
+name|user
+argument_list|,
+name|nmContext
+argument_list|)
+decl_stmt|;
+name|File
+name|containerLogDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|absLogDir
+argument_list|,
+name|appId
+operator|+
+literal|"/"
+operator|+
+name|container1
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|dirs
+operator|.
+name|contains
+argument_list|(
+name|containerLogDir
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -1885,7 +2063,7 @@ name|when
 argument_list|(
 name|localDirs
 operator|.
-name|getLogDirs
+name|getLogDirsForRead
 argument_list|()
 argument_list|)
 operator|.
